--- a/index.html
+++ b/index.html
@@ -101,7 +101,25 @@
 
     <!--========== Xoshimjonov O SECTION ==========-->
     <section>
-
+        <div class="container">
+            <div class="manegmant">
+                <div class="manegmant-text">
+                    <p>Effortless Validatio</p>
+                    <h2>Management</h2>
+                    <div class="manegmant__title title1">
+                        <h5>Accessory makers</h5>
+                        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                    </div>
+                    <div class="manegmant__title">
+                        <h5>Alterationists</h5>
+                        <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                    </div>
+                </div>
+                <div class="manegmant-img">
+                    <img src="./images/amico.png" alt="">
+                </div>
+            </div>
+        </div>
     </section>
 
 
