--- a/index.html
+++ b/index.html
@@ -106,8 +106,21 @@
 
 
     <!--========== Rustam  SECTION ==========-->
-    <section>
+    <section class="customer__support">
+        <div class="container">
+            <div class="card_1">
+                <img src="images/search-engines/amico.svg" alt="">
+            </div>
 
+            <ul class="card_2">
+                <li class="card_2-title up"><p>Easier decision making for</p></li>
+                <li class="card_2-title"><h2>Customer Support</h2></li>
+                <li class="card_2-title"><p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p></li>
+                <li class="card_2-icon"><img src="images/Group 13.svg" alt=""><p>Never worry about overpaying for your <br> energy again. </p></li>
+                <li class="card_2-icon"><img src="images/red-icon.svg" alt=""><p>We will only switch you to energy companies <br> that we trust and will treat you right </p></li>
+                <li class="card_2-icon"><img src="images/blue-icon.svg" alt=""><p>We track the markets daily and know where the <br> savings are. </p></li>
+            </ul>
+        </div>
     </section>
 
 
