--- a/index.html
+++ b/index.html
@@ -146,7 +146,72 @@
 
 <!--========== Xurshid FOOTER ==========-->
 <footer class="footer">
+    <div class="footer-top">
+        <div class="footer-top-left">
+            <div class="logo">
+                <img src="./images/logo.png" alt="logo">
+                <h2>Product</h2>
+            </div>
+            <div class="socials">
+                <img src="./images/instagram.png" alt="">
+                <img src="./images/facebook.png" alt="">
+                <img src="./images/twitter.png" alt="">
+            </div>
+        </div>
+            <ul class="footer-list">
+                <li class="footer-list-item">
+                    <h4>Resourses</h4>
+                </li>
+                <li class="footer-list-item">
+                    About us
+                </li>
+                <li class="footer-list-item">
+                    Blog
+                </li>
+                <li class="footer-list-item">
+                    Contact
+                </li>
+                <li class="footer-list-item">
+                   FAQ
+                </li>
+            </ul>
 
+            <ul class="footer-list">
+                <li class="footer-list-item">
+                    <h4>Legal Stuff</h4>
+                </li>
+                <li class="footer-list-item">
+                    Disclaimer
+                </li>
+                <li class="footer-list-item">
+                    Financing
+                </li>
+                <li class="footer-list-item">
+                    Privacy Policy
+                </li>
+                <li class="footer-list-item">
+                    Terms of Service
+                </li>
+            </ul>
+
+            <ul class="footer-list last">
+                <li class="footer-list-item">
+                    <h4>knowing you're always on <br> the best energy deal. 
+                    </h4>
+                </li>
+                <li class="footer-list-item">
+                    <input type="text" class="input">
+                </li>
+                <li class="footer-list-item">
+                    <button class="btn">SIGN UP NOW</button>  
+                </li>
+            </ul>
+        
+    </div>
+    <div class="footer-bottom">
+        <p>Made With Love By Figmaland All Right Reserved 
+        </p>
+    </div>
 </footer>
 
     
