--- a/index.html
+++ b/index.html
@@ -143,7 +143,26 @@
 
 
     <!--========== Kamronbek SECTION ==========-->
-    <section>
+    <section class="collab__section">
+
+        <div class="collab__text">
+            <span>Optimization for</span>
+            <h2 class="title">Callobarative</h2>
+            <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
+            
+            <div>
+                <h3>Accessory makers</h3>
+                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+            </div>
+            <div>
+                <h3>Alterationists</h3>
+                <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </div>
+        </div>
+
+        <div class="collab-img">
+            <img src="./images/collab.png" alt="">
+        </div>
 
     </section>
 
