price table done

--- a/index.html
+++ b/index.html
@@ -213,8 +213,68 @@
     </section>
 
     <!--========== MIKE SECTION ==========-->
-    <section>
-
+    <section class="price-table">
+        <div class="section-price">
+            <div class="section-price-global">
+                <p class="section-list-1">Price Table</p>
+                <p class="section-list-2">We offer competitive price</p>
+            </div>
+        </div>
+        <div class="price-table-boxes">
+            <div class="boxes-par">
+                <div class="box-1">
+                    <div class="box-list">
+                        <p class="category">Free</p>
+                        <p class="brief">Brief price description</p>
+                        <div class="num">0</div>
+                        <div class="dollar">$</div>
+                        <div class="per">Per/month</div>
+                        <p class="operators">
+                            Only 2 Operators <br>
+                            <br>
+                            Notifications <br>
+                            <br>
+                            Landing Pages
+                        </p>
+                        <div class="btn-green"><p>Order Now</p></div>
+                    </div>
+                   
+                </div>
+                <div class="box-2">
+                     <div class="box-list">
+                    <p class="category-2">Standart</p>
+                    <p class="brief-2">Brief price description</p>
+                    <div class="num-2">5</div>
+                    <div class="dollar-2">$</div>
+                    <div class="per-2">Per/month</div>
+                    <p class="operators-2">
+                        5+ Operators <br>
+                        <br>
+                        Notifications <br>
+                        <br>
+                        Landing Pages
+                    </p>
+                    <div class="btn-green-2"><p>Order Now</p></div>
+                </div></div>
+                <div class="box-3">
+                    <div class="box-list">
+                        <p class="category">Premium</p>
+                        <p class="brief">Brief price description</p>
+                        <div class="num-3">10</div>
+                        <div class="dollar">$</div>
+                        <div class="per">Per/month</div>
+                        <p class="operators">
+                            10+ Operators <br>
+                            <br>
+                            Notifications <br>
+                            <br>
+                            Landing Pages
+                        </p>
+                        <div class="btn-green"><p>Order Now</p></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!--========== ? SECTION ==========-->
