Add qep section

--- a/index.html
+++ b/index.html
@@ -149,8 +149,54 @@
 
 
     <!--========== Xon SECTION ==========-->
-    <section>
-
+    <section class="qep" id="qep">
+        <div class="border-radius"></div>
+        <div class="qep_container">
+            <div class="qep_head">
+                <h2 class="qep_head-title">Quick & Easy Process</h2>
+                <p class="qep_head-subtitle">Do you require some help for your project: Conception workshop,
+                    prototyping, marketing strategy, landing page, Ux/UI?</p>
+            </div>
+            <div class="qep_body">
+                <div class="qep_body-box">
+                    <div class="qep_body-content">
+                        <img src="./images/person1.png" class="qep_body-content_img" alt="person1">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-left"></div>
+                            <div class="chat-small-simvol-left"></div>
+                            <p class="qep_body-content_info-text">I can take care of your pitch</p>
+                        </div>
+                    </div>
+                    <div class="qep_body-content">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-right"></div>
+                            <div class="chat-small-simvol-right"></div>
+                            <p class="qep_body-content_info-text">I can design you website</p>
+                        </div>
+                        <img src="./images/person2.png" class="qep_body-content_img" alt="person2">
+                    </div>
+                </div>
+                <div class="qep_body-box">
+                    <div class="qep_body-content">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-right"></div>
+                            <div class="chat-small-simvol-right"></div>
+                            <p class="qep_body-content_info-text">I can prototype your app</p>
+                        </div>
+                        <img src="./images/person3.png" class="qep_body-content_img" alt="person3">
+                    </div>
+                    <div class="qep_body-content">
+                        <img src="./images/person4.png" class="qep_body-content_img" alt="person4">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-left"></div>
+                            <div class="chat-small-simvol-left"></div>
+                            <p class="qep_body-content_info-text">I can help marketing strategy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="qep_body-content"><button class="btn qep_body-content_button">Contact our export</button></div>
+            </div>
+        </div>
     </section>
 
     <!--========== Akmal SECTION ==========-->
