All sections done

--- a/index.html
+++ b/index.html
@@ -168,8 +168,54 @@
 
 
     <!--========== Xon SECTION ==========-->
-    <section>
-
+    <section class="qep" id="qep">
+        <div class="border-radius"></div>
+        <div class="qep_container">
+            <div class="qep_head">
+                <h2 class="qep_head-title">Quick & Easy Process</h2>
+                <p class="qep_head-subtitle">Do you require some help for your project: Conception workshop,
+                    prototyping, marketing strategy, landing page, Ux/UI?</p>
+            </div>
+            <div class="qep_body">
+                <div class="qep_body-box">
+                    <div class="qep_body-content">
+                        <img src="./images/Avator.png" class="qep_body-content_img" alt="person1">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-left"></div>
+                            <div class="chat-small-simvol-left"></div>
+                            <p class="qep_body-content_info-text">I can take care of your pitch</p>
+                        </div>
+                    </div>
+                    <div class="qep_body-content">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-right"></div>
+                            <div class="chat-small-simvol-right"></div>
+                            <p class="qep_body-content_info-text">I can design you website</p>
+                        </div>
+                        <img src="./images/Avator (1).png" class="qep_body-content_img" alt="person2">
+                    </div>
+                </div>
+                <div class="qep_body-box">
+                    <div class="qep_body-content">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-right"></div>
+                            <div class="chat-small-simvol-right"></div>
+                            <p class="qep_body-content_info-text">I can prototype your app</p>
+                        </div>
+                        <img src="./images/Avator (2).png" class="qep_body-content_img" alt="person3">
+                    </div>
+                    <div class="qep_body-content">
+                        <img src="./images/Avator (3).png" class="qep_body-content_img" alt="person4">
+                        <div class="qep_body-content_info-box">
+                            <div class="chat-simvol-left"></div>
+                            <div class="chat-small-simvol-left"></div>
+                            <p class="qep_body-content_info-text">I can help marketing strategy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="qep_body-content"><button class="btn qep_body-content_button">Contact our export</button></div>
+            </div>
+        </div>
     </section>
 
     <!--========== Akmal SECTION ==========-->
@@ -212,79 +258,157 @@
 
     </section>
 
-    <!--========== MIKE SECTION ==========-->
-    <section class="price-table">
-        <div class="section-price">
-            <div class="section-price-global">
-                <p class="section-list-1">Price Table</p>
-                <p class="section-list-2">We offer competitive price</p>
-            </div>
-        </div>
-        <div class="price-table-boxes">
-            <div class="boxes-par">
-                <div class="box-1">
-                    <div class="box-list">
-                        <p class="category">Free</p>
-                        <p class="brief">Brief price description</p>
-                        <div class="num">0</div>
-                        <div class="dollar">$</div>
-                        <div class="per">Per/month</div>
-                        <p class="operators">
-                            Only 2 Operators <br>
-                            <br>
-                            Notifications <br>
-                            <br>
-                            Landing Pages
-                        </p>
-                        <div class="btn-green"><p>Order Now</p></div>
-                    </div>
-                   
+    <!--========== Husanboy SECTION ==========-->
+        <section>
+      <div class="container">
+        <div class="cards">
+          <div class="card-top">
+            <h3 class="card-top-title">Price Table</h3>
+            <p class="card-top-subtitle">We offer competitive price</p>
+          </div>
+          <div class="card-bottom">
+            <div class="card-one">
+              <h4 class="card-bottom-title">Free</h4>
+              <p class="card-bottom-subtitle">Brief price description</p>
+              <div class="card-box">
+                <div class="card-box-left">
+                  <h2 class="card-box-number">0</h2>
                 </div>
-                <div class="box-2">
-                     <div class="box-list">
-                    <p class="category-2">Standart</p>
-                    <p class="brief-2">Brief price description</p>
-                    <div class="num-2">5</div>
-                    <div class="dollar-2">$</div>
-                    <div class="per-2">Per/month</div>
-                    <p class="operators-2">
-                        5+ Operators <br>
-                        <br>
-                        Notifications <br>
-                        <br>
-                        Landing Pages
-                    </p>
-                    <div class="btn-green-2"><p>Order Now</p></div>
-                </div></div>
-                <div class="box-3">
-                    <div class="box-list">
-                        <p class="category">Premium</p>
-                        <p class="brief">Brief price description</p>
-                        <div class="num-3">10</div>
-                        <div class="dollar">$</div>
-                        <div class="per">Per/month</div>
-                        <p class="operators">
-                            10+ Operators <br>
-                            <br>
-                            Notifications <br>
-                            <br>
-                            Landing Pages
-                        </p>
-                        <div class="btn-green"><p>Order Now</p></div>
-                    </div>
+                <div class="card-box-right">
+                  <h5 class="card-box-title">$</h5>
+                  <p class="card-box-subtitle">Per / month</p>
                 </div>
+              </div>
+              <ul class="card-ul">
+                <li class="card-ul-li">Only 2 Operators</li>
+                <li class="card-ul-li">Notifications</li>
+                <li class="card-ul-li">Landing Pages</li>
+              </ul>
+              <button class="card-btn">Order Now</button>
             </div>
+            <div class="card-two">
+              <h4 class="card-bottom-title">Standard</h4>
+              <p class="card-bottom-subtitle">Brief price description</p>
+              <div class="card-box">
+                <div class="card-box-left">
+                  <h2 class="card-box-number">5</h2>
+                </div>
+                <div class="card-box-right">
+                  <h5 class="card-box-title">$</h5>
+                  <p class="card-box-subtitle">Per / month</p>
+                </div>
+              </div>
+              <ul class="card-ul">
+                <li class="card-ul-li">5+ Operators</li>
+                <li class="card-ul-li">Notifications</li>
+                <li class="card-ul-li">Landing Pages</li>
+              </ul>
+              <button class="card-btn">Order Now</button>
+            </div>
+            <div class="card-three">
+              <h4 class="card-bottom-title">Premium</h4>
+              <p class="card-bottom-subtitle">Brief price description</p>
+              <div class="card-box">
+                <div class="card-box-left">
+                  <h2 class="card-box-number">9</h2>
+                </div>
+                <div class="card-box-right">
+                  <h5 class="card-box-title">$</h5>
+                  <p class="card-box-subtitle">Per / month</p>
+                </div>
+              </div>
+              <ul class="card-ul">
+                <li class="card-ul-li">9+ Operators</li>
+                <li class="card-ul-li">Notifications</li>
+                <li class="card-ul-li">Landing Pages</li>
+              </ul>
+              <button class="card-btn">Order Now</button>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
-    <!--========== ? SECTION ==========-->
-    <section>
+    <!--========== Mike SECTION ==========-->
+    <section class="client__section">
+        <h2 class="title">What Clients Say</h2>
+        <p>Problems trying to resolve the conflict between <br>
+            the two major realms of Classical physics: Newtonian mechanics </p>
 
+            <div class="client-list">
+                <div class="client-item">
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p>Product helps you see how many 
+                        more days you need to work to 
+                        reach your financial goal.</p>
+                        <div>
+                            <img src="./images/Ellipse 2.png" alt="">
+                            <div>
+                                <h3>Wahid ari</h3>
+                                <p>Designer</p>
+                            </div>
+                        </div>
+                </div>
+                <div class="client-item">
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p>Product helps you see how many 
+                        more days you need to work to 
+                        reach your financial goal.</p>
+                        <div>
+                            <img src="./images/Ellipse 2.png" alt="">
+                            <div>
+                                <h3>Wahid ari</h3>
+                                <p>Designer</p>
+                            </div>
+                        </div>
+                </div>
+                <div class="client-item">
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <p>Product helps you see how many 
+                        more days you need to work to 
+                        reach your financial goal.</p>
+                        <div>
+                            <img src="./images/Ellipse 2.png" alt="">
+                            <div>
+                                <h3>Wahid ari</h3>
+                                <p>Designer</p>
+                            </div>
+                        </div>
+                </div>
+
+            </div>
     </section>
 
     <!--========== Abduaziz SECTION ==========-->
-    <section>
+    <section class="green-box-section">
+        <div class="green-container">
+            <div class="green-text">
+                <h2>Join 100 Compannies who boost their business with Product</h2>
+                <button class="btn transparent">Get This</button>
+            </div>
 
+            <div class="green-img">
+                <img src="./images/Frame 18.png" alt="" class="">
+            </div>
+        </div>
     </section>
 
 </main>
