--- a/index.html
+++ b/index.html
@@ -398,16 +398,15 @@
     </section>
 
     <!--========== Abduaziz SECTION ==========-->
-    <section class="green-box-section">
-        <div class="green-container">
-            <div class="green-text">
-                <h2>Join 100 Compannies who boost their business with Product</h2>
-                <button class="btn transparent">Get This</button>
-            </div>
-
-            <div class="green-img">
-                <img src="./images/Frame 18.png" alt="" class="">
-            </div>
+    <section class="booster-box">
+        <div class="left-booster">
+            <h1 class="text-inside-box">Join 100 Compannies who <br>
+                 boost their business with <br>
+                 Product</h1>
+            <button class="btn00">Get This</button>
+        </div>
+        <div class="right-booster">
+            <img src="./images/Frame 18.png" alt="">
         </div>
     </section>
 
