--- a/index.html
+++ b/index.html
@@ -25,23 +25,26 @@
             <h2>Product</h2>
         </div>
         <div class="nav__lists">
+            <i class="fa-solid fa-x" id="exit"></i>
             <ul>
                 <li>
-                    <a href="#" style="font-weight: bold;">Product</a>
+                    <a id="link" href="#product" style="font-weight: bold;">Product</a>
                 </li>
                 <li>
-                    <a href="#">Customers</a>
+                    <a id="link" href="#customer">Customers</a>
                 </li>
                 <li>
-                    <a href="#">Pricing</a>
+                    <a id="link" href="#price">Pricing</a>
                 </li>
                 <li>
-                    <a href="#">Resources</a>
+                    <a id="link" href="#resources">Resources</a>
                 </li>
             </ul>
-            <button class="btn transparent">Sign In</button>
-            <button class="btn">Sign Up</button>
-            <div>
+            <div class="buttons">
+                <button class="btn transparent">Sign In</button>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="day-night-mode">
                 <input type="checkbox" id="toggle"  class="checkbox">
                 <label for="toggle" class="toggle">
                     <i class="active fa-solid fa-sun"></i>
@@ -49,6 +52,10 @@
                     <span class="ball"></span>
                 </label>
             </div>
+        </div>
+
+        <div class="nav__menu">
+            <i class="fa-solid fa-bars" id="menu__icon"></i>
         </div>
     </nav>
 
@@ -67,7 +74,7 @@
         </div>
     </div>
 
-    <div class="hero__product">
+    <div class="hero__product" id="product">
         <h2 class="title">Product  was Built Specifically <br>
             for You</h2>
         <div class="hero__product-list">
@@ -124,7 +131,7 @@
 
 
     <!--========== Rustam  SECTION ==========-->
-    <section class="customer__support">
+    <section class="customer__support" id="customer">
         <div class="container">
             <div class="card_1">
                 <img src="images/search-engines/amico.svg" alt="">
@@ -132,7 +139,7 @@
 
             <ul class="card_2">
                 <li class="card_2-title up"><p>Easier decision making for</p></li>
-                <li class="card_2-title"><h2>Customer Support</h2></li>
+                <li class="card_2-title title"><h2>Customer Support</h2></li>
                 <li class="card_2-title"><p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p></li>
                 <li class="card_2-icon"><img src="images/Group 13.svg" alt=""><p>Never worry about overpaying for your <br> energy again. </p></li>
                 <li class="card_2-icon"><img src="images/red-icon.svg" alt=""><p>We will only switch you to energy companies <br> that we trust and will treat you right </p></li>
@@ -259,7 +266,7 @@
     </section>
 
     <!--========== Husanboy SECTION ==========-->
-        <section>
+        <section id="price">
       <div class="container">
         <div class="cards">
           <div class="card-top">
@@ -267,7 +274,7 @@
             <p class="card-top-subtitle">We offer competitive price</p>
           </div>
           <div class="card-bottom">
-            <div class="card-one">
+            <div class="card-one card">
               <h4 class="card-bottom-title">Free</h4>
               <p class="card-bottom-subtitle">Brief price description</p>
               <div class="card-box">
@@ -286,7 +293,7 @@
               </ul>
               <button class="card-btn">Order Now</button>
             </div>
-            <div class="card-two">
+            <div class="card-two card">
               <h4 class="card-bottom-title">Standard</h4>
               <p class="card-bottom-subtitle">Brief price description</p>
               <div class="card-box">
@@ -305,7 +312,7 @@
               </ul>
               <button class="card-btn">Order Now</button>
             </div>
-            <div class="card-three">
+            <div class="card-three card">
               <h4 class="card-bottom-title">Premium</h4>
               <p class="card-bottom-subtitle">Brief price description</p>
               <div class="card-box">
@@ -330,7 +337,7 @@
     </section>
 
     <!--========== Mike SECTION ==========-->
-    <section class="client__section">
+    <section class="client__section" id="resources">
         <h2 class="title">What Clients Say</h2>
         <p>Problems trying to resolve the conflict between <br>
             the two major realms of Classical physics: Newtonian mechanics </p>
